# interview-prep

./: .gitignore  README.md  main.py  pyproject.toml  pytest_output.txt  requirements.txt  test_backend.py
backend/: config.py  main.py  pyproject.toml  requirements.txt
backend/agents/: curriculum_agent.py  intel_agent.py  pattern_agent.py  renderer_agent.py  schedule_agent.py
backend/db/: models.py  mongo.py
backend/graph/: graph.py  runner.py  state.py
backend/routers/: prep.py  progress.py
backend/src/: config.py  main.py
backend/src/agents/: curriculum_agent.py  intel_agent.py  pattern_agent.py  renderer_agent.py  schedule_agent.py
backend/src/db/: models.py  mongo.py
backend/src/graph/: graph.py  runner.py  state.py
backend/src/routers/: prep.py  progress.py
backend/src/tools/: llm.py  web_search.py
backend/src/utils/: notifier.py  parser.py
backend/templates/: tracker.html.j2
backend/tools/: llm.py  web_search.py
backend/utils/: notifier.py  parser.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: prepApi.js
frontend/src/components/: GenerationStatus.jsx  LoadingSpinner.jsx  Navbar.jsx  PlanCard.jsx  ProgressBar.jsx  QueryInput.jsx  Sidebar.jsx  TopicCheckbox.jsx  TrackerFrame.jsx
frontend/src/pages/: Home.jsx  Login.jsx  TrackerPage.jsx
tests/: test_curriculum_agent.py  test_graph_e2e.py  test_intel_agent.py
